[package]
name = "learn_tokio"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.46.1", features = ["full", "tracing"] }
tokio-stream = "0.1.17"
mini-redis = "0.4.1"
rand = "0.9.2"
bytes = "1.10.1"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
console-subscriber = "0.4.1"


[[bin]]
name = "blocking-client"
path = "src/clients/blocking_client.rs"
